--- a/styles/hero.css
+++ b/styles/hero.css
@@ -47,15 +47,24 @@
 .hero__snowflake {
   position: absolute;
   bottom: 0;
-  left: -180px;
+  left: -190px;
   z-index: 0;
 }
 
 .hero__snowflake img {
   width: 447px;
   height: 448px;
-  color: lightgray 50%;
   transform: rotate(-10deg);
+  animation: rotateSnowflake 70s linear infinite;
+}
+
+@keyframes rotateSnowflake {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .hero__santa {
