add animation for menu opening

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,4 +6,5 @@
 @import "./hero.css";
 @import "./presents.css";
 @import "./contact.css";
-@import "./small-snowflake.css"
+@import "./small-snowflake.css";
+
