--- a/styles/header.css
+++ b/styles/header.css
@@ -17,6 +17,7 @@
 .header__menu {
   display: flex;
   align-items: center;
+  margin-right: 80px;
 }
 
 .header__menu-list {
@@ -30,7 +31,7 @@
 }
 
 .menu-list__item {
-  transition: .3s linear;
+  transition: 0.3s linear;
 }
 
 .menu-list__item .white {
@@ -38,7 +39,7 @@
   right: 0;
   top: 0;
   color: #fff;
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 
 .menu-list__item .red {
@@ -46,7 +47,7 @@
   right: 0;
   top: 100%;
   color: #d02b2b;
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 
 .menu-list__link {
@@ -58,23 +59,25 @@
   cursor: pointer;
 }
 
-.menu-list__link:hover .white{
+.menu-list__link:hover .white {
   top: -100%;
 }
 
-.menu-list__link:hover .red{
+.menu-list__link:hover .red {
   top: 0;
 }
 
 .header__burger {
+  position: absolute;
+  top: 50%;
+  right: 40px;
+  z-index: 10;
   width: 60px;
   height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #d02b2b;
-  border-radius: 60px 0px 60px 60px;
-  transition: 0.5s ease-in-out;
+  transform: translateY(-50%);
   cursor: pointer;
 }
 
@@ -95,7 +98,7 @@
 }
 
 .header__burger span:nth-child(1) {
-  top: 0px;
+  top: -1px;
   transform-origin: left center;
 }
 
@@ -109,21 +112,49 @@
   transform-origin: left center;
 }
 
-.header__burger.open span:nth-child(1) {
-  transform: rotate(45deg);
-  top: 0px;
-  left: 5px;
+.sidebar {
+  position: absolute;
+  top: 0;
+  right: -100%;
+  z-index: 2;
+  width: 50vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-family: "Risque";
+  font-size: 32px;
 }
 
-.header__burger.open span:nth-child(2) {
-  width: 0%;
-  opacity: 0;
+.sidemenu__list {
+  text-align: center;
+  list-style: none;
 }
 
-.header__burger.open span:nth-child(3) {
-  transform: rotate(-45deg);
-  top: 22px;
-  left: 5px;
+.sidemenu__list-item {
+  margin: 20px 0;
+}
+
+.sidemenu__link {
+  color: inherit;
+}
+
+.bg-circle {
+  position: absolute;
+  top: 50%;
+  right: 40px;
+  z-index: 1;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #d02b2b;
+  border-radius: 60px 0px 60px 60px;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+  transform: translateY(-50%);
 }
 
 @media screen and (max-width: 992px) {
