--- a/styles/header.css
+++ b/styles/header.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 40px 50px;
+  transition: 0.3s ease;
 }
 
 .header__logo img {
