--- a/styles/hero.css
+++ b/styles/hero.css
@@ -6,7 +6,7 @@
 .hero__info {
   padding: 150px 100px;
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
 
 .hero__title {
@@ -40,7 +40,7 @@
 .hero__arrow {
   position: absolute;
   left: 150px;
-  bottom: 50px;
+  bottom: 10%;
   z-index: 1;
   cursor: pointer;
 }
