--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,6 @@
 @import "./header.css";
 @import "./hero.css";
 @import "./presents.css";
-@import "./contact.css";
+@import "./contacts.css";
 @import "./small-snowflake.css";
 @import "./custom-dropdown.css";
