--- a/styles/presents.css
+++ b/styles/presents.css
@@ -40,6 +40,10 @@
   transition: 0.3s ease;
 }
 
+.present__single-option:hover {
+  transform: scale(1.1);
+}
+
 .present__single-option.active {
   background-color: transparent;
 }
@@ -168,6 +172,7 @@
   }
 
   .present__single-option {
+    display: block;
     width: 110px;
     height: 110px;
     margin-right: 8px;
