change fonts to variables

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -16,7 +16,7 @@
 }
 
 .contact__form {
-  font-family: "Roboto";
+  font-family: var(--font-roboto);
   display: flex;
   flex-wrap: wrap;
   gap: 25px;
