--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -20,21 +20,21 @@
   display: flex;
   flex-wrap: wrap;
   gap: 25px;
-  color: #fff;
+  color: var(--primary-color);
 }
 
 .form__input,
 .form__textarea {
-  border: 3px solid #fff;
+  border: 3px solid var(--primary-color);
   border-radius: 15px;
   background: transparent;
   padding: 15px;
-  color: #fff;
+  color: var(--primary-color);
 }
 
 .form__input::placeholder,
 .form__textarea::placeholder {
-  color: #fff;
+  color: var(--primary-color);
 }
 
 .form__input {
@@ -54,7 +54,7 @@
   padding-left: 30px;
   cursor: pointer;
   user-select: none;
-  color: #d02b2b;
+  color: var(--secondary-color);
 }
 
 .form__checkbox-container input {
@@ -72,11 +72,11 @@
   height: 20px;
   width: 20px;
   background-color: transparent;
-  border: 2px solid #d02b2b;
+  border: 2px solid var(--secondary-color);
 }
 
 .form__checkbox-container input:checked ~ .checkmark {
-  background-color: #fff;
+  background-color: var(--primary-color);
 }
 
 .checkmark:after {
@@ -95,7 +95,7 @@
   top: 1px;
   width: 4px;
   height: 8px;
-  border: solid #d02b2b;
+  border: solid var(--secondary-color);
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
 }
