--- a/styles/header.css
+++ b/styles/header.css
@@ -39,7 +39,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  color: #fff;
+  color: var(--primary-color);
   transition: 0.3s ease;
 }
 
@@ -47,7 +47,7 @@
   position: absolute;
   right: 0;
   top: 100%;
-  color: #d02b2b;
+  color: var(--secondary-color);
   transition: 0.3s ease;
 }
 
@@ -93,7 +93,7 @@
   position: absolute;
   height: 3px;
   width: 100%;
-  background: #fff;
+  background: var(--primary-color);
   left: 0;
   transition: 0.25s ease-in-out;
 }
@@ -123,7 +123,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #fff;
+  color: var(--primary-color);
   font-size: 32px;
 }
 
@@ -156,7 +156,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #d02b2b;
+  background: var(--secondary-color);
   border-radius: 60px 0px 60px 60px;
   transition: 0.5s ease-in-out;
   cursor: pointer;
