--- a/styles/presents.css
+++ b/styles/presents.css
@@ -32,9 +32,9 @@
   margin: 0 15px;
   width: 150px;
   height: 150px;
-  border: 5px solid #fff;
+  border: 5px solid var(--primary-color);
   border-radius: 50%;
-  background-color: #fff;
+  background-color: var(--primary-color);
   box-shadow: 4px 10px 15px 0px rgba(0, 0, 0, 0.25) inset;
   cursor: pointer;
   transition: 0.3s ease;
@@ -84,9 +84,9 @@
   font-size: 18px;
   background: transparent;
   border-radius: 20px;
-  border: 3px solid #fff;
+  border: 3px solid var(--primary-color);
   background: rgba(254, 250, 250, 0);
-  color: #fff;
+  color: var(--primary-color);
   display: flex;
   justify-content: center;
   align-items: center;
