--- a/styles/header.css
+++ b/styles/header.css
@@ -10,6 +10,10 @@
   transition: 0.3s ease;
 }
 
+.header.header-scrolled {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
 .header__logo img {
   width: 198px;
   height: 65px;
